--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="assets/favicon.svg" />
+    <link rel="icon" href="./favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -11,8 +11,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="./favicon.svg" />
-
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>Budget-Tracker</title>
   </head>
